--- a/public/index.html
+++ b/public/index.html
@@ -7,18 +7,18 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
-    <title>Chat</title>
+    <title>Animate Chat</title>
 </head>
 
 <body>
     <section>
         <ul id="messages">
-            <li id="alert" style="display: none;"><p>Sending message...</li></p>
+            <li id="alert" style="display: none;"><p>Sending message...</p></li>
         </ul>
     </section>
     <footer>
         <div id="video-preview"></div>
-        <form>
+        <form name="sender_msg">
             <input type="text" name="message" autofocus>
         </form>
     </footer>
