Refactoring show message 'sending ...'

--- a/public/index.html
+++ b/public/index.html
@@ -12,11 +12,10 @@
 
 <body>
     <section>
-        <ul id="messages">
-            <li id="alert" style="display: none;"><p>Sending message...</p></li>
-        </ul>
+        <ul id="messages"></ul>
     </section>
     <footer>
+        <div id="alert" style="display: none;"><p>Sending message...</p></div>
         <div id="video-preview"></div>
         <form name="sender_msg">
             <input type="text" name="message" autofocus>
