--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
-    <title>Animate Chat</title>
+    <title>New Animate Chat</title>
 </head>
 
 <body>
