Configure frontend linter

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -12,6 +12,9 @@
 </head>
 
 <body>
+    <header>
+      <h2>Animate chat</h2>
+    </header>
     <section>
         <ul id="messages"></ul>
     </section>
