--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -23,6 +23,7 @@
         <div id="video-preview"></div>
         <form name="sender_msg">
             <input type="text" name="message" autofocus>
+            <input type="submit" name="send_msg" value="send">
         </form>
     </footer>
     <script src="/js/app.bundle.js" charset="utf-8"></script>
